--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  get_storage: ^2.1.1
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,10 @@ flutter:
     - images/tegenungan.jpg
     - images/uluwatu.jpg
     - images/bedugul.jpg
+    - images/empty-profile.png
+    - images/logoapp.png
+    - images/applogo.png
+    - images/appname.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
