--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ flutter:
     - images/plesir.png
     - images/logo.png
     - images/auth.jpg
-    - images/regis.jpg
+    - images/regis.png
     - images/tegenungan.jpg
     - images/uluwatu.jpg
     - images/bedugul.jpg
