--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   get_storage: ^2.1.1
   dio: ^5.4.3+1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
